Refacto train_py and change dropout rate

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ data/*
 
 # Other
 tensorflow_implementation/*
-*/path_integration/experiments/*
+path_integration/experiments/*
 **/*.pdf
+**/slurm*.out
