--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ data/*
 # Other
 tensorflow_implementation/*
 path_integration/experiments/*
+path_integration/images/*
 **/*.pdf
 **/slurm*.out
 **/.DS_Store
